# crypto_non_rt_etl_pipeline

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_csv.py  docker-compose.yml  eth_blocks_20250106.csv  pyproject.toml  sample_eth_accounts.py
client/: streamlit_app.py
database_management/: binance_table.py  env.py  sol_tables.py  tables.py
database_management/binance/: binance_table.py  env.py
database_management/binance/versions/: 820dcfd108c5_create_binance_tables.py  e8d1a0a0bbb9_recreate_tables.py
database_management/chainstack/: tables.py
database_management/chainstack/versions/: 7b977ba8a1b3_create_chainstack_tables.py
database_management/versions/: 14076c3b03fc_create_tables.py  177074689ec3_create_table.py  43622331be5e_added_s3_import_status_table.py  67da2e085db3_add_withdrawals_table_and_refactor_.py  8e92b22a1afb_create_tables.py  95c6572749fa_create_tables.py  da919f58cd44_create_tables.py  e339a5340608_add_transactions_block_and_access_list_.py
design_documents/: binance_crypto_prices.md
design_documents/asynchronous/: binance_exchange_info.py
design_documents/synchronous/: binance_klines.py
integration_tests/src/: conftest.py
integration_tests/src/dao/: test_eth_block_import_status_dao.py  test_eth_block_import_status_dao_sample.py  test_eth_withdrawals_dao.py  test_kline_binance_dao.py
integration_tests/src/extractors/: test_chain_stack_block_extractor.py
integration_tests/src/pipeline/: test_binance_etl_kline_pipeline.py  test_s3_to_pg_etl_pipeline.py
src/: binance_etl_kline_pipeline.py  binance_s3_to_pg_etl_pipeline.py  chain_stack_eth_block_etl_pipeline.py  quick_node_eth_block_etl_pipeline.py  s3_chainstack_eth_block_etl_pipeline.py  s3_to_pg_etl_pipeline.py
src/binance/asynchronous/: date_range_split.py  get_binance_exchange_info.py  get_binance_klines.py
src/binance/synchronous/: binance_exchange_info.py  binance_klines.py
src/chainstack/asynchronous/: get_block_information.py  get_latest_block.py
src/chainstack/exceptions/: chainstack_client_error.py
src/chainstack/synchronous/: get_block_information.py  get_latest_block.py
src/dao/: binance_s3_import_status_dao.py  eth_block_dao.py  eth_block_import_status_dao.py  eth_transaction_access_list_dao.py  eth_transactions_dao.py  eth_withdrawals_dao.py  kline_binance_dao.py  s3_binance_import_status_dao.py  s3_import_status_dao.py
src/examples/: eth_blob_base_fee.py  get_latest_block.py
src/extractors/: abstract_extractor.py  binance_exchange_info_extractor.py  binance_klines_extractor.py  chain_stack_block_extractor.py  quick_node_block_extractor.py
src/file_explorer/: s3_file_explorer.py
src/models/: block_models.py
src/models/binance_models/: binance_exchange_info.py  binance_filters.py  binance_klines.py  binance_rate_limit.py
src/quick_node/: eth_blob_base_fee.py  get_block_information.py
src/utils/: get_previous_block.py  logging_utils.py
(+33 files in other folders)
