[tool.poetry]
name = "crypto-non-rt-etl-pipeline"
version = "0.1.0"
description = "Non Real-Time ETL pipeline to extract, load and transform crypto data from QuickNode"
authors = ["eugeneleejunping <eugeneleejunping@gmail.com>"]
readme = "README.md"
packages = [
    {include = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
sqlalchemy = "2.0.30"
alembic = "1.13.1"
psycopg2-binary = "^2.9.9"
aiohttp = "^3.9.5"
retry = "^0.9.2"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
pytest-asyncio-cooperative = "^0.37.0"
streamlit = "^1.39.0"

[tool.poetry.dev-dependencies]
ruff = "^0.4.8"
black = "^24.4.2"
mypy = "^1.10.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
